<resources>
    <string name="app_name">Cloud Counselage Connect+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_icon">send icon</string>
    <string name="enter_message">Enter Message</string>
    <string name="logout">Logout</string>
    <string name="login_twitter">Login Twitter</string>
    <string name="facebook_register">Facebook Register</string>
    <string name="twitter_register">twitter_register</string>
    <string name="microsoft_register">microsoft register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="email_login">Email</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome to Cloud Counselage Connect+</string>
    <string name="facebook_app_id">189149910883714</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">701284a013b5aa5bef341520bdb15d8f</string>


</resources>