<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_logout_24"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:layout_marginTop="10dp">
    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="75dp"
            android:background="@color/white"
            android:elevation="10dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/edtSendMsg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:hint="@string/enter_message"
                android:padding="10dp">

            </EditText>

        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/imgbtnSend"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:contentDescription="@string/send_icon"
            android:src="@drawable/baseline_send_24"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>